--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 10 Dec 2024 12:55:59 PM UTC
+%% Tue 17 Dec 2024 01:52:29 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -13,55 +13,103 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.9\times10^{11}$};
+\node[gp node right] at (2.240,1.845) {$1.91\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.691)--(15.447,3.691);
+\draw[gp path] (2.424,2.871)--(15.447,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.691)--(2.604,3.691);
-\draw[gp path] (15.447,3.691)--(15.267,3.691);
-\node[gp node right] at (2.240,3.691) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,2.871)--(2.604,2.871);
+\draw[gp path] (15.447,2.871)--(15.267,2.871);
+\node[gp node right] at (2.240,2.871) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.537)--(15.447,5.537);
+\draw[gp path] (2.424,3.896)--(15.447,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.537)--(2.604,5.537);
-\draw[gp path] (15.447,5.537)--(15.267,5.537);
-\node[gp node right] at (2.240,5.537) {$2\times10^{11}$};
+\draw[gp path] (2.424,3.896)--(2.604,3.896);
+\draw[gp path] (15.447,3.896)--(15.267,3.896);
+\node[gp node right] at (2.240,3.896) {$1.93\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.383)--(15.447,7.383);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.383)--(2.604,7.383);
-\draw[gp path] (15.447,7.383)--(15.267,7.383);
-\node[gp node right] at (2.240,7.383) {$2.05\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.229)--(15.447,9.229);
+\draw[gp path] (2.424,5.947)--(15.447,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.229)--(2.604,9.229);
-\draw[gp path] (15.447,9.229)--(15.267,9.229);
-\node[gp node right] at (2.240,9.229) {$2.1\times10^{11}$};
+\draw[gp path] (2.424,5.947)--(2.604,5.947);
+\draw[gp path] (15.447,5.947)--(15.267,5.947);
+\node[gp node right] at (2.240,5.947) {$1.95\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,6.973)--(15.447,6.973);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,6.973)--(2.604,6.973);
+\draw[gp path] (15.447,6.973)--(15.267,6.973);
+\node[gp node right] at (2.240,6.973) {$1.96\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$1.97\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,9.024)--(15.447,9.024);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.024)--(2.604,9.024);
+\draw[gp path] (15.447,9.024)--(15.267,9.024);
+\node[gp node right] at (2.240,9.024) {$1.98\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,10.049)--(15.447,10.049);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.049)--(2.604,10.049);
+\draw[gp path] (15.447,10.049)--(15.267,10.049);
+\node[gp node right] at (2.240,10.049) {$1.99\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -73,7 +121,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -90,74 +138,86 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,1.845)--(4.284,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,1.845)--(4.284,2.025);
-\draw[gp path] (4.284,11.075)--(4.284,10.895);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,1.845)--(6.145,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,1.845)--(6.145,2.025);
-\draw[gp path] (6.145,11.075)--(6.145,10.895);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,1.845)--(8.005,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,1.845)--(8.005,2.025);
-\draw[gp path] (8.005,11.075)--(8.005,10.895);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,1.845)--(9.866,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,1.845)--(9.866,2.025);
-\draw[gp path] (9.866,11.075)--(9.866,10.895);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,1.845)--(11.726,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,1.845)--(11.726,2.025);
-\draw[gp path] (11.726,11.075)--(11.726,10.895);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,1.845)--(13.587,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,1.845)--(13.587,2.025);
-\draw[gp path] (13.587,11.075)--(13.587,10.895);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -169,48 +229,115 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.772)--(2.424,4.751)--(2.424,4.678)--(2.424,4.669)--(2.461,4.609)%
-  --(2.461,4.584)--(2.461,4.514)--(2.461,4.488)--(2.461,4.437)--(2.498,4.396)--(2.498,4.374)%
-  --(2.498,4.369)--(2.498,4.263)--(2.536,4.246)--(2.536,4.239)--(2.536,4.232)--(2.536,4.205)%
-  --(2.573,4.146)--(2.573,4.098)--(2.573,4.081)--(2.573,4.078)--(2.573,4.038)--(2.610,3.994)%
-  --(2.610,3.987)--(2.610,3.953)--(2.647,3.949)--(2.647,3.925)--(2.647,3.889)--(2.647,3.881)%
-  --(2.684,3.859)--(2.684,3.823)--(2.684,3.791)--(2.684,3.783)--(2.684,3.772)--(2.722,3.762)%
-  --(2.722,3.752)--(2.759,3.750)--(2.759,3.747)--(2.796,3.735)--(2.796,3.727)--(2.796,3.721)%
-  --(2.833,3.720)--(2.833,3.702)--(2.833,3.678)--(2.833,3.648)--(2.871,3.620)--(2.871,3.612)%
-  --(2.908,3.610)--(2.945,3.609)--(2.982,3.603)--(2.982,3.571)--(2.982,3.562)--(3.019,3.553)%
-  --(3.019,3.552)--(3.019,3.522)--(3.057,3.520)--(3.057,3.512)--(3.057,3.504)--(3.094,3.450)%
-  --(3.094,3.447)--(3.094,3.443)--(3.094,3.429)--(3.131,3.423)--(3.280,3.421)--(3.280,3.416)%
-  --(3.317,3.352)--(3.354,3.349)--(3.391,3.348)--(3.391,3.343)--(3.391,3.333)--(3.429,3.330)%
-  --(3.429,3.328)--(3.466,3.327)--(3.577,3.325)--(3.615,3.315)--(3.615,3.314)--(3.652,3.302)%
-  --(3.652,3.299)--(3.689,3.295)--(3.689,3.287)--(3.726,3.282)--(3.726,3.270)--(3.764,3.267)%
-  --(3.764,3.262)--(3.801,3.255)--(3.838,3.252)--(3.950,3.241)--(3.987,3.228)--(4.024,3.227)%
-  --(4.061,3.221)--(4.210,3.217)--(4.210,3.212)--(4.210,3.207)--(4.322,3.197)--(4.359,3.184)%
-  --(4.545,3.181)--(4.545,3.172)--(4.582,3.166)--(4.582,3.164)--(4.582,5.215)--(4.619,4.239)%
-  --(4.619,4.213)--(4.619,4.042)--(4.657,4.002)--(4.657,3.994)--(4.694,3.962)--(4.694,3.907)%
-  --(4.731,3.873)--(4.731,3.831)--(4.768,3.770)--(4.768,3.717)--(4.805,3.708)--(4.805,3.678)%
-  --(4.805,3.591)--(4.843,3.572)--(4.843,3.537)--(4.843,3.521)--(4.843,3.415)--(4.880,3.381)%
-  --(4.917,3.306)--(4.917,3.304)--(4.954,3.258)--(4.991,3.238)--(4.991,3.237)--(4.991,3.217)%
-  --(5.029,3.209)--(5.066,3.193)--(5.103,3.184)--(5.140,3.180)--(5.215,3.168)--(5.252,3.157)%
-  --(5.252,3.140)--(5.252,3.118)--(5.289,3.118)--(5.289,3.110)--(5.326,3.106)--(5.326,3.092)%
-  --(5.363,3.066)--(5.401,3.062)--(5.401,3.053)--(5.438,2.980)--(5.438,2.939)--(5.438,2.934)%
-  --(5.475,2.932)--(5.475,2.887)--(5.587,2.871)--(5.624,2.828)--(5.624,2.826)--(5.624,2.804)%
-  --(5.661,2.796)--(5.736,2.792)--(5.773,2.787)--(5.773,2.765)--(5.810,2.761)--(5.810,2.756)%
-  --(5.847,2.734)--(5.922,2.719)--(5.959,2.710)--(5.959,2.700)--(6.033,2.694)--(6.033,2.691)%
-  --(6.070,2.678)--(6.294,2.671)--(6.331,2.665)--(6.443,2.658)--(6.517,2.654)--(6.629,2.646)%
-  --(6.703,3.608)--(6.740,3.606)--(6.777,3.605)--(6.815,5.403)--(6.889,4.384)--(6.926,4.373)%
-  --(6.963,4.373)--(6.963,4.329)--(7.038,4.308)--(7.224,4.308)--(7.261,4.308)--(7.373,4.308)%
-  --(8.229,4.308)--(8.824,4.308)--(9.084,6.102)--(9.159,5.511)--(9.345,5.505)--(11.317,7.274)%
-  --(11.428,7.413)--(12.173,7.413)--(12.396,7.413)--(12.694,7.413)--(13.587,9.163)--(13.624,10.426)%
-  --(13.661,10.420);
+\draw[gp path] (2.424,8.376)--(2.424,8.282)--(2.424,8.114)--(2.457,8.061)--(2.457,7.927)%
+  --(2.457,7.899)--(2.457,7.877)--(2.489,7.655)--(2.489,7.640)--(2.489,7.551)--(2.489,7.494)%
+  --(2.489,7.409)--(2.522,7.385)--(2.522,7.304)--(2.522,7.272)--(2.522,7.231)--(2.554,7.174)%
+  --(2.554,7.141)--(2.554,7.057)--(2.554,7.042)--(2.587,6.979)--(2.587,6.896)--(2.587,6.830)%
+  --(2.619,6.789)--(2.619,6.768)--(2.652,6.682)--(2.652,6.560)--(2.652,6.411)--(2.652,6.349)%
+  --(2.652,6.166)--(2.684,6.097)--(2.684,6.034)--(2.684,5.852)--(2.717,5.776)--(2.717,5.737)%
+  --(2.750,5.709)--(2.750,5.630)--(2.750,5.442)--(2.750,5.435)--(2.782,5.310)--(2.782,5.289)%
+  --(2.782,5.244)--(2.782,5.242)--(2.815,5.232)--(2.815,5.205)--(2.815,5.183)--(2.815,5.136)%
+  --(2.847,5.081)--(2.847,5.066)--(2.847,4.941)--(2.847,4.908)--(2.880,4.888)--(2.880,4.859)%
+  --(2.880,4.851)--(2.880,4.830)--(2.912,4.812)--(2.912,4.808)--(2.912,4.801)--(2.945,4.766)%
+  --(2.945,4.750)--(2.945,4.719)--(2.945,4.695)--(2.945,4.652)--(2.977,4.609)--(2.977,4.575)%
+  --(2.977,4.569)--(2.977,4.492)--(3.010,4.485)--(3.010,4.469)--(3.043,4.430)--(3.043,4.390)%
+  --(3.043,4.384)--(3.043,4.367)--(3.075,4.350)--(3.108,4.307)--(3.140,4.282)--(3.140,4.279)%
+  --(3.173,4.253)--(3.173,4.248)--(3.173,4.222)--(3.173,4.042)--(3.205,3.978)--(3.205,3.911)%
+  --(3.205,3.888)--(3.238,3.871)--(3.270,3.867)--(3.368,3.830)--(3.368,3.820)--(3.401,3.812)%
+  --(3.401,3.787)--(3.433,3.783)--(3.433,3.771)--(3.466,3.766)--(3.466,3.714)--(3.466,3.699)%
+  --(3.531,3.664)--(3.531,3.655)--(3.531,3.654)--(3.564,3.637)--(3.596,3.624)--(3.596,3.616)%
+  --(3.629,4.424)--(3.661,4.324)--(3.661,4.251)--(3.661,4.226)--(3.661,4.181)--(3.694,4.139)%
+  --(3.694,4.104)--(3.694,3.994)--(3.694,3.995)--(3.694,3.970)--(3.694,3.931)--(3.726,3.901)%
+  --(3.726,3.898)--(3.726,3.839)--(3.726,3.821)--(3.726,3.800)--(3.726,3.747)--(3.759,3.710)%
+  --(3.759,3.700)--(3.759,3.614)--(3.759,3.610)--(3.759,3.622)--(3.791,3.609)--(3.791,3.595)%
+  --(3.824,3.582)--(3.824,3.591)--(3.824,3.574)--(3.824,3.557)--(3.824,3.543)--(3.857,3.503)%
+  --(3.857,3.450)--(3.889,3.434)--(3.889,3.456)--(3.889,3.419)--(3.922,3.456)--(3.922,3.440)%
+  --(3.922,3.437)--(3.922,3.419)--(3.954,3.444)--(3.954,3.435)--(3.954,3.507)--(3.954,3.495)%
+  --(3.987,3.488)--(3.987,3.454)--(3.987,3.435)--(3.987,3.424)--(4.019,3.468)--(4.019,3.462)%
+  --(4.019,3.433)--(4.019,3.420)--(4.052,3.418)--(4.052,3.419)--(4.084,3.429)--(4.084,3.427)%
+  --(4.084,3.412)--(4.084,3.386)--(4.084,3.377)--(4.117,3.344)--(4.117,3.339)--(4.150,3.335)%
+  --(4.150,3.310)--(4.150,3.338)--(4.150,3.329)--(4.182,3.322)--(4.182,3.326)--(4.215,3.322)%
+  --(4.215,9.677)--(4.215,5.020)--(4.215,4.886)--(4.215,4.546)--(4.215,4.487)--(4.247,4.437)%
+  --(4.247,4.292)--(4.247,4.261)--(4.247,4.114)--(4.280,4.093)--(4.280,4.009)--(4.280,3.917)%
+  --(4.280,3.894)--(4.280,3.825)--(4.312,3.824)--(4.312,3.764)--(4.312,3.672)--(4.312,3.613)%
+  --(4.345,3.585)--(4.345,3.518)--(4.377,3.503)--(4.377,3.435)--(4.377,3.427)--(4.377,3.409)%
+  --(4.410,3.328)--(4.410,3.320)--(4.410,3.287)--(4.410,3.117)--(4.443,3.106)--(4.443,3.074)%
+  --(4.443,3.063)--(4.475,3.088)--(4.475,3.084)--(4.475,3.036)--(4.508,2.996)--(4.508,2.988)%
+  --(4.540,2.976)--(4.540,2.971)--(4.540,2.970)--(4.540,2.963)--(4.573,2.935)--(4.573,2.809)%
+  --(4.573,2.800)--(4.605,2.780)--(4.605,2.748)--(4.605,2.709)--(4.605,2.669)--(4.638,2.666)%
+  --(4.638,2.637)--(4.670,2.628)--(4.670,2.624)--(4.703,2.618)--(4.736,2.613)--(4.736,2.612)%
+  --(4.736,2.597)--(4.736,2.584)--(4.768,2.564)--(4.768,2.557)--(4.768,2.482)--(4.801,2.481)%
+  --(4.801,2.471)--(4.833,2.429)--(4.866,2.414)--(4.866,2.408)--(4.866,2.375)--(4.866,2.356)%
+  --(4.898,2.275)--(4.931,2.259)--(4.931,2.255)--(4.963,2.237)--(4.963,2.230)--(4.996,2.216)%
+  --(4.996,2.213)--(5.029,2.205)--(5.094,2.233)--(5.094,2.243)--(5.126,2.241)--(5.126,2.253)%
+  --(5.159,2.247)--(5.191,2.246)--(5.191,2.238)--(5.191,2.237)--(5.224,2.250)--(5.257,2.250)%
+  --(5.289,2.268)--(5.289,2.262)--(5.289,2.261)--(5.322,2.269)--(5.322,2.267)--(5.354,2.266)%
+  --(5.387,2.261)--(5.387,2.251)--(5.484,2.245)--(5.517,2.240)--(5.517,2.238)--(5.517,2.229)%
+  --(5.550,2.226)--(5.550,2.223)--(5.582,2.221)--(5.615,2.221)--(5.647,2.218)--(5.745,2.215)%
+  --(5.745,2.213)--(5.777,2.210)--(5.810,2.207)--(5.908,2.383)--(5.908,2.417)--(5.940,2.416)%
+  --(6.005,2.409)--(6.070,2.399)--(6.070,2.397)--(6.168,2.397)--(6.168,7.537)--(6.168,4.099)%
+  --(6.168,4.076)--(6.201,3.973)--(6.201,3.939)--(6.201,3.811)--(6.233,3.787)--(6.233,3.736)%
+  --(6.233,3.725)--(6.233,3.484)--(6.266,3.469)--(6.266,3.381)--(6.266,3.352)--(6.266,3.318)%
+  --(6.298,3.300)--(6.298,3.287)--(6.298,3.270)--(6.298,3.235)--(6.298,3.209)--(6.331,3.190)%
+  --(6.331,3.175)--(6.331,2.775)--(6.331,2.772)--(6.363,2.730)--(6.363,2.679)--(6.363,2.662)%
+  --(6.396,2.650)--(6.396,2.630)--(6.429,2.608)--(6.429,2.587)--(6.429,2.551)--(6.429,2.515)%
+  --(6.461,2.482)--(6.494,2.458)--(6.494,2.448)--(6.526,2.430)--(6.526,2.419)--(6.526,2.377)%
+  --(6.559,2.374)--(6.591,2.366)--(6.591,2.358)--(6.591,2.351)--(6.624,2.346)--(6.656,2.345)%
+  --(6.656,2.334)--(6.656,2.333)--(6.689,2.323)--(6.722,2.323)--(6.819,2.315)--(6.819,2.301)%
+  --(6.917,2.299)--(6.982,2.298)--(6.982,2.293)--(6.982,2.289)--(7.015,2.279)--(7.015,2.278)%
+  --(7.047,2.263)--(7.047,2.239)--(7.080,2.235)--(7.112,2.218)--(7.145,2.216)--(7.177,2.210)%
+  --(7.210,2.201)--(7.243,2.201)--(7.275,2.200)--(7.308,2.193)--(7.373,2.192)--(7.405,2.183)%
+  --(7.405,2.175)--(7.405,2.170)--(7.470,2.162)--(7.503,2.160)--(7.568,2.156)--(7.698,2.151)%
+  --(7.731,2.146)--(7.829,2.145)--(7.926,2.143)--(7.926,2.138)--(7.926,2.133)--(7.991,2.132)%
+  --(8.024,2.125)--(8.122,7.210)--(8.122,5.151)--(8.154,4.967)--(8.154,4.953)--(8.154,4.940)%
+  --(8.154,4.930)--(8.187,4.870)--(8.187,4.791)--(8.219,4.765)--(8.219,4.747)--(8.219,4.660)%
+  --(8.219,4.647)--(8.252,4.602)--(8.252,4.580)--(8.252,4.572)--(8.284,4.550)--(8.284,4.408)%
+  --(8.284,4.384)--(8.284,4.381)--(8.317,4.244)--(8.317,4.169)--(8.317,4.167)--(8.317,4.108)%
+  --(8.349,4.083)--(8.349,4.066)--(8.382,4.051)--(8.382,3.851)--(8.382,3.847)--(8.382,3.820)%
+  --(8.382,3.857)--(8.415,3.848)--(8.415,3.838)--(8.415,3.829)--(8.415,3.818)--(8.447,3.811)%
+  --(8.447,3.810)--(8.480,3.808)--(8.577,3.850)--(8.577,3.846)--(8.577,3.836)--(8.610,3.830)%
+  --(8.675,3.738)--(8.675,3.711)--(8.675,3.670)--(8.708,3.654)--(8.708,3.647)--(8.740,3.646)%
+  --(8.740,3.632)--(8.773,3.637)--(8.773,3.617)--(8.805,3.611)--(8.936,3.609)--(8.936,3.608)%
+  --(8.968,3.601)--(9.098,3.611)--(9.098,3.589)--(9.131,3.580)--(9.131,3.572)--(9.163,3.567)%
+  --(9.163,3.563)--(9.163,3.559)--(9.196,3.557)--(9.261,3.556)--(9.261,3.561)--(9.294,3.557)%
+  --(9.294,3.554)--(9.326,3.553)--(9.326,3.545)--(9.359,3.542)--(9.359,3.540)--(9.424,3.534)%
+  --(9.456,3.534)--(9.456,3.529)--(9.489,3.521)--(9.652,3.539)--(9.684,3.538)--(9.782,3.534)%
+  --(9.815,3.530)--(9.847,3.528)--(9.847,3.526)--(9.847,3.523)--(10.042,3.518)--(10.042,3.515)%
+  --(10.075,8.407)--(10.108,7.323)--(10.108,7.176)--(10.108,7.169)--(10.108,7.115)--(10.108,7.097)%
+  --(10.140,6.920)--(10.140,6.698)--(10.140,6.646)--(10.173,6.608)--(10.205,6.603)--(10.205,6.581)%
+  --(10.205,6.573)--(10.238,6.547)--(10.270,6.513)--(10.270,6.494)--(10.303,6.466)--(10.303,6.451)%
+  --(10.303,6.444)--(10.303,6.423)--(10.303,6.417)--(10.335,6.401)--(10.335,6.396)--(10.368,6.378)%
+  --(10.368,6.367)--(10.368,6.365)--(10.401,6.351)--(10.433,6.329)--(10.433,6.322)--(10.466,6.311)%
+  --(10.466,6.304)--(10.498,6.286)--(10.498,6.269)--(10.498,6.264)--(10.531,6.255)--(10.563,6.245)%
+  --(10.563,6.238)--(10.596,6.171)--(10.628,6.164)--(10.661,6.163)--(10.694,6.158)--(10.726,6.151)%
+  --(10.726,6.145)--(10.726,6.139)--(10.759,6.134)--(10.791,6.116)--(10.791,6.091)--(10.791,6.089)%
+  --(10.791,6.081)--(10.824,6.071)--(10.824,6.031)--(10.824,6.028)--(10.856,6.023)--(10.856,6.009)%
+  --(10.889,5.986)--(10.922,5.982)--(10.987,5.976)--(11.019,5.971)--(11.019,5.950)--(11.052,5.950)%
+  --(11.117,5.949)--(11.117,5.945)--(11.149,5.939)--(11.149,5.934)--(11.182,5.931)--(11.182,5.925)%
+  --(11.215,5.919)--(11.215,5.918)--(11.247,5.912)--(11.280,5.912)--(11.312,5.911)--(11.345,5.903)%
+  --(11.345,5.898)--(11.377,5.891)--(11.442,5.888)--(11.442,5.887)--(11.508,5.881)--(11.540,5.878)%
+  --(11.638,5.875)--(11.703,5.871)--(11.768,5.885)--(11.833,5.877)--(11.866,5.872)--(11.866,5.870)%
+  --(11.931,5.864)--(11.963,5.921)--(12.028,9.851)--(12.061,10.963)--(12.094,10.936)--(12.094,10.928)%
+  --(12.094,10.857)--(12.126,10.820)--(12.126,10.692)--(12.126,10.588)--(12.191,10.524)--(12.224,10.521)%
+  --(12.224,10.517)--(12.256,10.516)--(12.256,10.499)--(12.289,10.490)--(12.289,10.488)--(12.321,10.486)%
+  --(12.321,10.472)--(12.354,10.468)--(12.354,10.457)--(12.354,10.454)--(12.387,10.444)--(12.387,10.441)%
+  --(12.452,10.421)--(12.452,10.364)--(12.484,10.364)--(12.484,10.361)--(12.517,10.346)--(12.549,10.342)%
+  --(12.549,10.337)--(12.582,10.336)--(12.614,10.329)--(12.680,10.354)--(12.680,10.347)--(12.712,10.343)%
+  --(12.712,10.336)--(12.745,10.320)--(12.745,10.319)--(12.777,10.307)--(12.777,10.306)--(12.810,10.300)%
+  --(12.810,10.293)--(12.842,10.290)--(12.875,10.284)--(12.908,10.278)--(12.908,10.272)--(12.973,10.274)%
+  --(13.005,10.256)--(13.038,10.247)--(13.038,10.245)--(13.038,10.244)--(13.070,10.226)--(13.103,10.217)%
+  --(13.135,10.216)--(13.168,10.214)--(13.233,10.213)--(13.266,10.210)--(13.331,10.204)--(13.331,10.197)%
+  --(13.331,10.195)--(13.396,10.187)--(13.396,10.183)--(13.526,10.177)--(13.526,10.173)--(13.689,10.197)%
+  --(13.754,10.191)--(13.852,10.189)--(13.852,10.184);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
+\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
