--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 09 Dec 2024 01:04:41 PM UTC
+%% Tue 17 Dec 2024 02:07:05 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -102,74 +102,86 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,1.845)--(4.284,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,1.845)--(4.284,2.025);
-\draw[gp path] (4.284,11.075)--(4.284,10.895);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,1.845)--(6.145,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,1.845)--(6.145,2.025);
-\draw[gp path] (6.145,11.075)--(6.145,10.895);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,1.845)--(8.005,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,1.845)--(8.005,2.025);
-\draw[gp path] (8.005,11.075)--(8.005,10.895);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,1.845)--(9.866,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,1.845)--(9.866,2.025);
-\draw[gp path] (9.866,11.075)--(9.866,10.895);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,1.845)--(11.726,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,1.845)--(11.726,2.025);
-\draw[gp path] (11.726,11.075)--(11.726,10.895);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,1.845)--(13.587,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,1.845)--(13.587,2.025);
-\draw[gp path] (13.587,11.075)--(13.587,10.895);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -181,70 +193,82 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.390)--(2.424,7.346)--(2.461,7.315)--(2.461,7.303)--(2.461,7.264)%
-  --(2.461,7.195)--(2.461,7.125)--(2.461,7.106)--(2.498,7.072)--(2.498,7.062)--(2.498,7.038)%
-  --(2.498,7.014)--(2.536,6.994)--(2.536,6.992)--(2.536,6.976)--(2.536,6.909)--(2.536,6.861)%
-  --(2.573,6.815)--(2.573,6.779)--(2.573,6.769)--(2.573,6.761)--(2.610,6.755)--(2.610,6.732)%
-  --(2.610,6.723)--(2.610,6.694)--(2.610,6.665)--(2.647,6.642)--(2.647,6.618)--(2.647,6.605)%
-  --(2.647,6.593)--(2.684,6.564)--(2.684,6.554)--(2.684,6.550)--(2.684,6.530)--(2.722,6.509)%
-  --(2.759,6.491)--(2.759,6.486)--(2.759,6.485)--(2.796,6.479)--(2.796,6.464)--(2.796,6.452)%
-  --(2.833,6.449)--(2.833,6.438)--(2.833,6.380)--(2.871,6.369)--(2.871,6.357)--(2.871,6.356)%
-  --(2.871,6.354)--(2.871,6.333)--(2.908,6.332)--(2.908,6.320)--(2.945,6.318)--(2.982,6.296)%
-  --(2.982,6.292)--(3.019,6.276)--(3.019,6.272)--(3.019,6.268)--(3.057,6.268)--(3.094,6.266)%
-  --(3.094,6.265)--(3.131,6.261)--(3.168,6.253)--(3.168,6.241)--(3.168,6.236)--(3.168,6.235)%
-  --(3.205,6.229)--(3.205,6.221)--(3.243,6.216)--(3.243,6.193)--(3.243,6.188)--(3.280,6.133)%
-  --(3.280,6.129)--(3.317,6.119)--(3.317,6.117)--(3.354,6.117)--(3.391,6.107)--(3.429,6.096)%
-  --(3.540,6.096)--(3.577,6.096)--(3.652,6.090)--(3.652,6.087)--(3.689,6.067)--(3.689,6.060)%
-  --(3.689,6.054)--(3.726,6.052)--(3.726,6.047)--(3.764,6.047)--(3.764,6.035)--(3.838,6.032)%
-  --(3.838,6.025)--(3.838,6.022)--(3.838,6.011)--(3.912,6.010)--(3.912,6.006)--(3.950,5.996)%
-  --(3.987,5.992)--(3.987,5.990)--(3.987,5.986)--(4.024,5.979)--(4.098,5.966)--(4.173,5.965)%
-  --(4.210,5.957)--(4.284,5.951)--(4.396,5.950)--(4.470,5.950)--(4.508,5.948)--(4.508,5.947)%
-  --(4.545,5.943)--(4.619,5.942)--(4.657,5.937)--(4.657,5.936)--(4.731,5.928)--(4.805,5.925)%
-  --(4.880,5.922)--(4.917,5.914)--(4.917,5.913)--(5.029,5.912)--(5.029,5.910)--(5.066,5.908)%
-  --(5.066,5.901)--(5.103,5.899)--(5.252,5.898)--(5.289,5.886)--(5.289,5.884)--(5.326,5.882)%
-  --(5.363,5.882)--(5.363,5.878)--(5.401,5.876)--(5.475,5.870)--(5.587,5.862)--(5.698,5.860)%
-  --(5.773,5.860)--(5.810,5.860)--(5.847,5.854)--(5.922,5.850)--(5.959,5.846)--(5.996,5.845)%
-  --(6.033,5.838)--(6.070,4.470)--(6.070,4.423)--(6.070,4.367)--(6.070,4.350)--(6.070,4.338)%
-  --(6.108,4.324)--(6.108,4.307)--(6.108,4.270)--(6.108,4.178)--(6.145,4.165)--(6.145,4.149)%
-  --(6.145,4.138)--(6.145,4.130)--(6.145,4.112)--(6.182,4.100)--(6.182,4.086)--(6.182,4.084)%
-  --(6.182,4.079)--(6.219,4.069)--(6.219,4.054)--(6.219,3.920)--(6.256,3.840)--(6.294,3.835)%
-  --(6.294,3.832)--(6.331,3.823)--(6.331,3.820)--(6.368,3.817)--(6.368,3.811)--(6.405,3.801)%
-  --(6.443,3.687)--(6.443,3.682)--(6.443,3.561)--(6.443,3.557)--(6.480,3.555)--(6.480,3.549)%
-  --(6.480,3.482)--(6.517,3.468)--(6.554,3.460)--(6.591,3.455)--(6.591,3.449)--(6.591,3.448)%
-  --(6.666,3.441)--(6.703,3.441)--(6.703,3.432)--(6.703,3.424)--(6.740,3.415)--(6.777,3.413)%
-  --(6.815,3.402)--(6.815,3.319)--(6.852,3.228)--(6.889,3.227)--(6.963,3.226)--(6.963,3.225)%
-  --(7.001,3.219)--(7.001,3.210)--(7.075,3.204)--(7.075,3.198)--(7.112,3.191)--(7.187,3.190)%
-  --(7.224,3.189)--(7.261,3.188)--(7.298,3.182)--(7.336,3.178)--(7.373,3.172)--(7.447,3.167)%
-  --(7.447,3.166)--(7.633,3.165)--(7.670,3.160)--(7.670,3.155)--(7.670,3.152)--(7.819,3.150)%
-  --(7.819,3.149)--(7.856,3.146)--(7.894,3.145)--(8.005,3.145)--(8.042,3.142)--(8.042,3.136)%
-  --(8.117,3.136)--(8.154,3.136)--(8.266,3.134)--(8.266,3.129)--(8.303,3.127)--(8.340,3.126)%
-  --(8.377,3.125)--(8.377,3.045)--(8.377,3.044)--(8.415,3.043)--(8.415,3.039)--(8.452,3.038)%
-  --(8.489,3.037)--(8.563,3.030)--(8.563,3.005)--(8.601,2.995)--(8.601,2.991)--(8.638,2.991)%
-  --(8.675,2.987)--(8.712,2.984)--(8.749,2.982)--(8.824,2.978)--(8.898,2.973)--(9.010,2.971)%
-  --(9.047,2.969)--(9.159,2.968)--(9.196,2.965)--(9.233,2.962)--(9.345,2.961)--(9.531,2.957)%
-  --(9.568,2.950)--(9.642,2.947)--(9.717,2.947)--(9.791,6.492)--(9.829,6.409)--(9.829,6.358)%
-  --(9.829,6.303)--(9.829,6.238)--(9.866,6.165)--(9.866,6.072)--(9.903,6.050)--(9.903,6.029)%
-  --(9.903,6.010)--(9.903,5.998)--(9.940,5.954)--(9.940,5.895)--(9.940,5.832)--(9.977,5.780)%
-  --(10.015,5.774)--(10.052,5.726)--(10.052,5.701)--(10.052,5.684)--(10.089,5.676)--(10.089,5.661)%
-  --(10.126,5.638)--(10.163,5.620)--(10.201,5.603)--(10.275,5.587)--(10.275,5.578)--(10.312,5.577)%
-  --(10.312,5.570)--(10.349,5.562)--(10.387,5.552)--(10.387,5.550)--(10.387,5.547)--(10.424,5.525)%
-  --(10.424,5.518)--(10.461,5.517)--(10.573,5.509)--(10.610,5.498)--(10.722,5.495)--(10.722,5.488)%
-  --(10.759,5.486)--(10.759,5.480)--(10.908,5.469)--(10.908,5.466)--(10.908,5.458)--(10.945,5.454)%
-  --(10.945,5.443)--(10.945,5.435)--(11.019,5.432)--(11.019,5.427)--(11.354,5.426)--(11.763,5.423)%
-  --(11.801,5.419)--(11.875,5.413)--(11.912,5.403)--(11.987,5.398)--(12.061,5.393)--(12.098,5.365)%
-  --(12.135,5.354)--(12.210,5.350)--(12.247,5.344)--(12.433,5.344)--(12.470,5.333)--(12.508,5.323)%
-  --(12.545,5.314)--(12.582,5.307)--(12.619,5.274)--(12.917,5.271)--(13.140,5.268)--(13.214,5.267)%
-  --(13.252,5.261)--(13.363,5.257)--(13.401,5.254)--(13.475,5.251)--(13.549,10.647)--(13.661,10.637)%
-  --(13.735,10.616)--(14.926,10.595);
+\draw[gp path] (2.424,7.213)--(2.424,7.073)--(2.457,7.053)--(2.457,7.025)--(2.457,7.010)%
+  --(2.489,6.984)--(2.489,6.971)--(2.489,6.962)--(2.522,6.938)--(2.522,6.921)--(2.522,6.915)%
+  --(2.554,6.890)--(2.554,6.848)--(2.554,6.826)--(2.587,6.801)--(2.587,6.788)--(2.587,6.739)%
+  --(2.619,6.700)--(2.619,6.698)--(2.619,6.690)--(2.619,6.676)--(2.652,6.651)--(2.652,6.607)%
+  --(2.652,6.596)--(2.684,6.595)--(2.684,6.535)--(2.684,6.531)--(2.684,6.496)--(2.717,6.492)%
+  --(2.717,6.464)--(2.750,6.426)--(2.750,6.408)--(2.750,6.398)--(2.750,6.386)--(2.750,6.381)%
+  --(2.782,6.374)--(2.782,6.364)--(2.782,6.345)--(2.815,6.338)--(2.815,6.333)--(2.847,6.304)%
+  --(2.880,6.295)--(2.880,6.294)--(2.912,6.275)--(2.912,6.271)--(2.945,6.262)--(2.945,6.261)%
+  --(2.977,6.260)--(2.977,6.254)--(3.010,6.226)--(3.043,6.222)--(3.075,6.214)--(3.108,6.189)%
+  --(3.140,6.174)--(3.140,6.158)--(3.173,6.155)--(3.173,6.147)--(3.205,6.145)--(3.205,6.132)%
+  --(3.238,6.104)--(3.270,6.097)--(3.336,6.072)--(3.336,6.060)--(3.368,6.051)--(3.368,6.049)%
+  --(3.401,6.047)--(3.401,6.046)--(3.401,6.042)--(3.433,6.037)--(3.498,6.028)--(3.498,6.022)%
+  --(3.531,6.022)--(3.531,6.018)--(3.564,6.017)--(3.564,6.012)--(3.596,6.008)--(3.596,5.998)%
+  --(3.629,5.994)--(3.629,5.989)--(3.661,5.986)--(3.661,5.982)--(3.694,5.982)--(3.759,5.975)%
+  --(3.759,5.966)--(3.759,6.043)--(3.759,6.018)--(3.791,6.007)--(3.791,5.978)--(3.791,5.963)%
+  --(3.791,5.936)--(3.791,5.935)--(3.791,5.919)--(3.824,5.891)--(3.824,5.868)--(3.824,5.866)%
+  --(3.824,5.857)--(3.857,5.840)--(3.857,5.836)--(3.857,5.828)--(3.857,5.817)--(3.889,5.816)%
+  --(3.889,5.815)--(3.889,5.808)--(3.889,5.805)--(3.922,5.801)--(3.922,5.795)--(3.922,5.792)%
+  --(3.922,5.785)--(3.922,5.782)--(3.954,5.780)--(3.954,5.777)--(3.954,5.774)--(3.987,5.773)%
+  --(3.987,5.769)--(3.987,5.764)--(3.987,5.750)--(4.019,5.744)--(4.019,5.742)--(4.019,5.738)%
+  --(4.019,5.734)--(4.052,5.741)--(4.052,5.739)--(4.084,5.738)--(4.084,5.736)--(4.084,5.729)%
+  --(4.117,5.728)--(4.117,5.727)--(4.117,5.721)--(4.182,5.702)--(4.182,5.710)--(4.182,5.707)%
+  --(4.215,5.723)--(4.215,5.716)--(4.247,5.723)--(4.247,5.719)--(4.247,5.716)--(4.247,5.713)%
+  --(4.280,5.706)--(4.280,5.717)--(4.312,5.719)--(4.312,5.717)--(4.312,5.716)--(4.377,5.715)%
+  --(4.410,5.721)--(4.443,5.720)--(4.443,5.719)--(4.475,5.717)--(4.508,5.716)--(4.508,5.713)%
+  --(4.540,5.707)--(4.540,5.702)--(4.573,5.703)--(4.573,5.706)--(4.573,5.704)--(4.605,5.702)%
+  --(4.605,5.699)--(4.605,5.697)--(4.638,5.698)--(4.703,5.697)--(4.801,5.696)--(4.801,5.692)%
+  --(4.866,5.705)--(4.898,5.703)--(4.898,5.679)--(4.963,5.698)--(5.029,5.696)--(5.061,5.694)%
+  --(5.094,5.672)--(5.126,5.672)--(5.159,5.669)--(5.289,5.669)--(5.289,5.667)--(5.354,5.666)%
+  --(5.354,5.668)--(5.387,5.666)--(5.419,5.664)--(5.452,3.347)--(5.484,3.339)--(5.484,3.336)%
+  --(5.484,3.240)--(5.484,3.233)--(5.517,3.252)--(5.517,3.249)--(5.517,3.243)--(5.517,3.240)%
+  --(5.550,3.238)--(5.550,3.225)--(5.550,3.219)--(5.550,3.215)--(5.550,3.213)--(5.582,3.211)%
+  --(5.582,3.209)--(5.615,3.137)--(5.615,3.029)--(5.615,3.027)--(5.647,3.070)--(5.647,3.067)%
+  --(5.647,3.062)--(5.647,3.061)--(5.680,3.056)--(5.680,3.053)--(5.712,3.050)--(5.712,3.048)%
+  --(5.712,3.045)--(5.745,3.043)--(5.745,3.042)--(5.745,3.040)--(5.745,3.038)--(5.777,3.037)%
+  --(5.810,3.034)--(5.810,3.033)--(5.810,2.972)--(5.810,2.971)--(5.843,2.970)--(5.843,2.969)%
+  --(5.875,2.967)--(5.908,2.965)--(5.908,2.964)--(5.940,2.963)--(6.005,2.961)--(6.038,2.954)%
+  --(6.038,2.951)--(6.103,2.948)--(6.103,2.947)--(6.103,2.945)--(6.136,2.945)--(6.168,2.944)%
+  --(6.168,2.943)--(6.201,2.939)--(6.331,2.928)--(6.363,2.927)--(6.363,2.923)--(6.396,2.921)%
+  --(6.396,2.920)--(6.429,2.919)--(6.461,2.917)--(6.494,2.917)--(6.526,2.916)--(6.559,2.914)%
+  --(6.559,2.913)--(6.591,2.912)--(6.624,2.911)--(6.656,2.911)--(6.754,2.910)--(6.852,2.910)%
+  --(6.982,2.908)--(7.047,2.905)--(7.112,2.905)--(7.112,2.903)--(7.145,2.903)--(7.177,2.903)%
+  --(7.275,2.903)--(7.308,2.902)--(7.405,2.902)--(7.470,2.901)--(7.536,2.900)--(7.568,2.899)%
+  --(7.601,2.899)--(7.633,2.897)--(7.666,2.896)--(7.731,2.895)--(7.796,2.894)--(7.829,2.894)%
+  --(7.926,2.893)--(8.056,2.891)--(8.122,2.899)--(8.154,2.899)--(8.187,2.899)--(8.187,2.898)%
+  --(8.349,2.896)--(8.447,2.896)--(8.480,2.895)--(8.610,2.894)--(8.675,2.894)--(8.740,6.342)%
+  --(8.740,6.268)--(8.740,6.200)--(8.740,6.166)--(8.773,6.101)--(8.773,6.057)--(8.773,6.008)%
+  --(8.773,5.924)--(8.773,5.888)--(8.773,5.875)--(8.805,5.862)--(8.805,5.861)--(8.805,5.828)%
+  --(8.805,5.806)--(8.805,5.777)--(8.838,5.755)--(8.838,5.736)--(8.838,5.725)--(8.838,5.717)%
+  --(8.838,5.715)--(8.870,5.712)--(8.870,5.665)--(8.903,5.665)--(8.903,5.664)--(8.903,5.660)%
+  --(8.936,5.655)--(8.936,5.653)--(8.936,5.647)--(8.968,5.647)--(8.968,5.644)--(8.968,5.643)%
+  --(9.001,5.638)--(9.001,5.630)--(9.098,5.623)--(9.196,5.619)--(9.196,5.617)--(9.229,5.615)%
+  --(9.229,5.613)--(9.261,5.609)--(9.261,5.608)--(9.294,5.608)--(9.326,5.607)--(9.359,5.604)%
+  --(9.424,5.602)--(9.424,5.600)--(9.456,5.600)--(9.456,5.595)--(9.489,5.591)--(9.489,5.589)%
+  --(9.522,5.588)--(9.554,5.573)--(9.587,5.569)--(9.619,5.568)--(9.684,5.568)--(9.684,5.565)%
+  --(9.717,5.564)--(9.717,5.562)--(9.749,5.562)--(9.749,5.561)--(9.782,5.560)--(9.815,5.559)%
+  --(9.815,5.557)--(9.847,5.556)--(9.880,5.553)--(9.945,5.551)--(10.042,5.550)--(10.075,5.547)%
+  --(10.108,5.545)--(10.108,5.544)--(10.173,5.543)--(10.173,5.541)--(10.205,5.541)--(10.335,5.537)%
+  --(10.563,5.535)--(10.628,5.532)--(10.661,5.531)--(10.661,5.530)--(10.694,5.528)--(10.726,5.526)%
+  --(10.759,5.525)--(10.759,5.520)--(10.856,5.520)--(10.954,5.520)--(11.019,5.517)--(11.215,5.512)%
+  --(11.247,5.512)--(11.345,5.509)--(11.605,5.508)--(11.638,5.508)--(11.670,5.507)--(11.735,5.507)%
+  --(11.735,5.506)--(11.768,5.505)--(11.768,5.504)--(11.801,5.504)--(11.801,5.503)--(11.931,5.502)%
+  --(11.931,5.500)--(11.963,5.500)--(11.996,10.368)--(11.996,10.350)--(12.028,10.291)--(12.028,10.272)%
+  --(12.028,10.231)--(12.028,10.225)--(12.061,10.197)--(12.094,10.197)--(12.094,10.189)--(12.094,10.188)%
+  --(12.126,10.162)--(12.159,10.161)--(12.224,10.159)--(12.224,10.158)--(12.321,10.133)--(12.321,10.123)%
+  --(12.354,10.121)--(12.387,10.099)--(12.387,10.094)--(12.484,10.087)--(12.712,10.085)--(12.842,10.082)%
+  --(13.363,10.081)--(13.884,10.081);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
+\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
