--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -162,7 +162,7 @@ continuously needs to be updated. Maintenance scheduling is a complex process
 often more associated with operation management, but here we will argue that is
 possible to implement general maintenance scheduling approaches, if the solution
 approach is designed to be integrated into a business process of the kind that
-are usually developed by the principles of operation management (plan-do-check-act, etc.)~\cite{???}.  
+are usually developed by the principles of operation management (plan-do-check-act, etc.)~\cite{w.edwardsdemingOutCrisis}.  
 This paper
 proposes a novel optimization method that is capable to optimizing a scheduling
 problem in the following setting: Primary data source is changing in real-time;
