--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,32 +1,41 @@
+@misc{w.edwardsdemingOutCrisis,
+	title = {Out of the {{Crisis}}},
+	author = {W. Edwards Deming},
+	urldate = {2024-12-17},
+	howpublished = {https://mitpress.mit.edu/9780262541152/out-of-the-crisis/},
+	file = {C:\Users\s174460\Zotero\storage\ELSB2EF8\out-of-the-crisis.html},
+}
 @article{pisinger2007general,
-  title={A general heuristic for vehicle routing problems},
-  author={Pisinger, David and Ropke, Stefan},
-  journal={Computers \& operations research},
-  volume={34},
-  number={8},
-  pages={2403--2435},
-  year={2007},
-  publisher={Elsevier}
+	title = {A general heuristic for vehicle routing problems},
+	author = {Pisinger, David and Ropke, Stefan},
+	journal = {Computers \& operations research},
+	volume = {34},
+	number = {8},
+	pages = {2403--2435},
+	year = {2007},
+	publisher = {Elsevier},
 }
 
 @inproceedings{shaw1998using,
-  title={Using constraint programming and local search methods to solve vehicle routing problems},
-  author={Shaw, Paul},
-  booktitle={International conference on principles and practice of constraint programming},
-  pages={417--431},
-  year={1998},
-  organization={Springer}
+	title = {Using constraint programming and local search methods to solve
+	         vehicle routing problems},
+	author = {Shaw, Paul},
+	booktitle = {International conference on principles and practice of
+	             constraint programming},
+	pages = {417--431},
+	year = {1998},
+	organization = {Springer},
 }
 
 @article{do2007constrained,
-  title={The constrained compartmentalised knapsack problem},
-  author={do Prado Marques, Fabiano and Arenales, Marcos Nereu},
-  journal={Computers \& operations research},
-  volume={34},
-  number={7},
-  pages={2109--2129},
-  year={2007},
-  publisher={Elsevier}
+	title = {The constrained compartmentalised knapsack problem},
+	author = {do Prado Marques, Fabiano and Arenales, Marcos Nereu},
+	journal = {Computers \& operations research},
+	volume = {34},
+	number = {7},
+	pages = {2109--2129},
+	year = {2007},
+	publisher = {Elsevier},
 }
 
 
