--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -12,9 +12,10 @@ Finally the effect of changing the work order values $\ParStrategicValue$,
 is tested in Section~\ref{sec:results:strategic_value_changes}.
 
 \subsection{Data Instance}\label{sec:data_instance}
-This data instance comes from Total Energies~\cite{???}, where data is extracted from their SAP ERP system. 
-The data instance used in this paper is associated with a specific offshore platform that for 
-the time horizon (which is ???) that we are looking at contains 3487 outstanding work orders ($\SetWorkOrder{}$), 
+% TODO: What should be cited here?
+This data instance comes from Total Energies~\cite{} , where data is extracted from their SAP ERP system. 
+The data instance used in this paper is from a specific offshore platform that for 
+the 2 year time horizon contains 3487 outstanding work orders ($\SetWorkOrder{}$), 
 have 16 different resource skill sets ($\SetResource$) (e.g. mechanics, electricians, 
 turbine specialists, etc.), and finally the scheduling horizon stretches over a 52 bi-weekly 
 periods ($\SetPeriod$) meaning approximately 2 years.
