--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
@@ -1,243 +1,196 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 09 Dec 2024 12:46:14 PM UTC
+%% Tue 17 Dec 2024 03:03:42 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
-\gpcolor{color=gp lt color border}
+\gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
-\draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.92\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.383)--(15.447,3.383);
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,1.661)--(15.447,1.661);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.383)--(2.604,3.383);
-\draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.93\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.922)--(15.447,4.922);
+\draw[gp path] (2.424,1.661)--(2.604,1.661);
+\draw[gp path] (15.447,1.661)--(15.267,1.661);
+\node[gp node right] at (2.240,1.661) {$1.92\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,3.230)--(15.447,3.230);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\draw[gp path] (15.447,4.922)--(15.267,4.922);
-\node[gp node right] at (2.240,4.922) {$1.94\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.460)--(15.447,6.460);
+\draw[gp path] (2.424,3.230)--(2.604,3.230);
+\draw[gp path] (15.447,3.230)--(15.267,3.230);
+\node[gp node right] at (2.240,3.230) {$1.93\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,4.799)--(15.447,4.799);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.460)--(2.604,6.460);
-\draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.998)--(15.447,7.998);
+\draw[gp path] (2.424,4.799)--(2.604,4.799);
+\draw[gp path] (15.447,4.799)--(15.267,4.799);
+\node[gp node right] at (2.240,4.799) {$1.94\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,6.368)--(15.447,6.368);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$1.96\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.537)--(15.447,9.537);
+\draw[gp path] (2.424,6.368)--(2.604,6.368);
+\draw[gp path] (15.447,6.368)--(15.267,6.368);
+\node[gp node right] at (2.240,6.368) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,7.937)--(15.447,7.937);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.537)--(2.604,9.537);
-\draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$1.97\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,7.937)--(2.604,7.937);
+\draw[gp path] (15.447,7.937)--(15.267,7.937);
+\node[gp node right] at (2.240,7.937) {$1.96\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,9.506)--(15.447,9.506);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.506)--(2.604,9.506);
+\draw[gp path] (15.447,9.506)--(15.267,9.506);
+\node[gp node right] at (2.240,9.506) {$1.97\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
 \draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
 \node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,1.661)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,1.661)--(2.424,1.841);
 \draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (4.284,1.845)--(4.284,11.075);
+\node[gp node left,rotate=270] at (2.424,1.477) {$0$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (3.726,1.661)--(3.726,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,1.845)--(4.284,2.025);
-\draw[gp path] (4.284,11.075)--(4.284,10.895);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (6.145,1.845)--(6.145,11.075);
+\draw[gp path] (3.726,1.661)--(3.726,1.841);
+\draw[gp path] (3.726,11.075)--(3.726,10.895);
+\node[gp node left,rotate=270] at (3.726,1.477) {$2$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (5.029,1.661)--(5.029,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,1.845)--(6.145,2.025);
-\draw[gp path] (6.145,11.075)--(6.145,10.895);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (8.005,1.845)--(8.005,11.075);
+\draw[gp path] (5.029,1.661)--(5.029,1.841);
+\draw[gp path] (5.029,11.075)--(5.029,10.895);
+\node[gp node left,rotate=270] at (5.029,1.477) {$4$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (6.331,1.661)--(6.331,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,1.845)--(8.005,2.025);
-\draw[gp path] (8.005,11.075)--(8.005,10.895);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (9.866,1.845)--(9.866,11.075);
+\draw[gp path] (6.331,1.661)--(6.331,1.841);
+\draw[gp path] (6.331,11.075)--(6.331,10.895);
+\node[gp node left,rotate=270] at (6.331,1.477) {$6$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (7.633,1.661)--(7.633,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,1.845)--(9.866,2.025);
-\draw[gp path] (9.866,11.075)--(9.866,10.895);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (11.726,1.845)--(11.726,11.075);
+\draw[gp path] (7.633,1.661)--(7.633,1.841);
+\draw[gp path] (7.633,11.075)--(7.633,10.895);
+\node[gp node left,rotate=270] at (7.633,1.477) {$8$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (8.936,1.661)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,1.845)--(11.726,2.025);
-\draw[gp path] (11.726,11.075)--(11.726,10.895);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (13.587,1.845)--(13.587,11.075);
+\draw[gp path] (8.936,1.661)--(8.936,1.841);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.477) {$10$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (10.238,1.661)--(10.238,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,1.845)--(13.587,2.025);
-\draw[gp path] (13.587,11.075)--(13.587,10.895);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\draw[gp path] (10.238,1.661)--(10.238,1.841);
+\draw[gp path] (10.238,11.075)--(10.238,10.895);
+\node[gp node left,rotate=270] at (10.238,1.477) {$12$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (11.540,1.661)--(11.540,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (11.540,1.661)--(11.540,1.841);
+\draw[gp path] (11.540,11.075)--(11.540,10.895);
+\node[gp node left,rotate=270] at (11.540,1.477) {$14$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (12.842,1.661)--(12.842,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (12.842,1.661)--(12.842,1.841);
+\draw[gp path] (12.842,11.075)--(12.842,10.895);
+\node[gp node left,rotate=270] at (12.842,1.477) {$16$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (14.145,1.661)--(14.145,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (14.145,1.661)--(14.145,1.841);
+\draw[gp path] (14.145,11.075)--(14.145,10.895);
+\node[gp node left,rotate=270] at (14.145,1.477) {$18$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (15.447,1.661)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (15.447,1.661)--(15.447,1.841);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node left,rotate=270] at (15.447,1.477) {$20$};
+\draw[gp path] (2.424,11.075)--(2.424,1.661)--(15.447,1.661)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.431)--(2.424,10.299)--(2.461,10.059)--(2.461,9.898)--(2.461,9.667)%
-  --(2.461,9.348)--(2.461,9.110)--(2.498,8.721)--(2.498,8.375)--(2.498,8.291)--(2.498,8.140)%
-  --(2.498,8.059)--(2.498,7.834)--(2.536,7.776)--(2.536,7.581)--(2.536,7.549)--(2.536,7.499)%
-  --(2.536,7.465)--(2.536,7.421)--(2.573,7.375)--(2.573,7.365)--(2.573,7.278)--(2.573,7.253)%
-  --(2.573,7.120)--(2.610,7.029)--(2.610,6.811)--(2.610,6.767)--(2.610,6.744)--(2.647,6.640)%
-  --(2.647,6.629)--(2.647,6.615)--(2.684,6.541)--(2.684,6.490)--(2.722,6.420)--(2.722,6.415)%
-  --(2.759,6.274)--(2.796,6.146)--(2.833,6.121)--(2.833,6.100)--(2.871,6.061)--(2.871,6.052)%
-  --(2.871,5.845)--(2.908,5.841)--(2.908,5.798)--(2.908,5.715)--(2.945,5.664)--(2.982,5.613)%
-  --(3.019,5.394)--(3.019,5.376)--(3.019,5.197)--(3.019,5.137)--(3.057,5.087)--(3.094,5.023)%
-  --(3.131,4.974)--(3.205,4.973)--(3.280,4.923)--(3.317,4.918)--(3.317,4.866)--(3.354,4.834)%
-  --(3.391,4.818)--(3.391,4.815)--(3.429,4.797)--(3.429,4.735)--(3.429,4.699)--(3.466,4.689)%
-  --(3.466,4.678)--(3.466,4.667)--(3.466,4.622)--(3.503,4.567)--(3.540,4.501)--(3.577,4.454)%
-  --(3.577,4.446)--(3.577,4.441)--(3.577,4.414)--(3.615,4.406)--(3.615,4.356)--(3.652,4.320)%
-  --(3.652,4.298)--(3.726,4.235)--(3.726,4.221)--(3.726,4.195)--(3.801,4.188)--(3.838,4.145)%
-  --(3.912,4.129)--(3.950,4.115)--(4.024,4.113)--(4.098,4.107)--(4.098,4.081)--(4.173,4.075)%
-  --(4.173,4.021)--(4.210,3.984)--(4.210,3.937)--(4.284,3.928)--(4.322,3.899)--(4.359,3.889)%
-  --(4.359,3.844)--(4.396,3.826)--(4.433,3.826)--(4.433,3.477)--(4.433,3.405)--(4.470,3.342)%
-  --(4.470,3.336)--(4.470,3.313)--(4.582,3.256)--(4.582,3.238)--(4.582,3.220)--(4.619,3.164)%
-  --(4.619,3.142)--(4.657,3.115)--(4.657,3.102)--(4.694,3.046)--(4.768,3.012)--(4.843,2.964)%
-  --(4.880,2.953)--(4.917,2.946)--(4.954,2.920)--(5.029,2.883)--(5.177,2.871)--(5.252,2.868)%
-  --(5.252,2.866)--(5.363,2.851)--(5.438,2.842)--(5.438,2.824)--(5.512,2.815)--(5.587,2.801)%
-  --(5.661,2.792)--(5.773,2.786)--(5.810,2.781)--(5.847,2.776)--(5.884,2.759)--(5.959,2.752)%
-  --(5.959,2.737)--(6.033,2.692)--(6.070,2.668)--(6.108,2.636)--(6.145,2.627)--(6.256,2.606)%
-  --(6.443,2.597)--(6.629,2.594)--(6.666,2.594)--(6.703,3.070)--(6.740,2.982)--(6.852,2.976)%
-  --(7.001,2.956)--(7.001,2.864)--(7.001,2.858)--(7.261,2.778)--(7.336,2.768)--(7.373,2.754)%
-  --(7.410,2.730)--(7.447,2.722)--(7.522,2.708)--(7.522,2.702)--(7.522,2.692)--(7.559,2.661)%
-  --(7.633,2.645)--(7.670,2.632)--(7.670,2.627)--(7.745,2.589)--(7.782,2.570)--(7.856,2.556)%
-  --(7.856,2.526)--(7.856,2.524)--(8.005,2.501)--(8.005,2.481)--(8.005,2.303)--(8.080,2.292)%
-  --(8.154,2.285)--(8.340,2.280)--(8.415,2.277)--(8.415,2.266)--(8.489,2.259)--(8.526,2.245)%
-  --(8.675,2.245)--(8.712,2.238)--(8.712,2.219)--(8.898,2.211)--(8.898,2.199)--(8.898,3.001)%
-  --(8.936,2.985)--(8.936,2.892)--(8.936,2.862)--(8.973,2.822)--(9.010,2.746)--(9.122,2.707)%
-  --(9.159,2.706)--(9.159,2.674)--(9.159,2.672)--(9.196,2.648)--(9.308,2.647)--(9.642,2.634)%
-  --(9.680,2.623)--(9.717,2.612)--(9.791,2.599)--(9.866,2.578)--(9.903,2.566)--(10.089,2.564)%
-  --(10.163,2.542)--(10.238,2.502)--(10.275,2.442)--(10.461,2.420)--(10.461,2.403)--(10.610,2.398)%
-  --(10.647,2.382)--(10.759,2.355)--(10.945,2.347)--(11.019,2.346)--(11.056,2.332)--(11.094,2.295)%
-  --(11.131,2.295)--(11.168,3.039)--(11.168,3.034)--(11.205,3.020)--(11.354,3.004)--(11.428,2.994)%
-  --(11.428,2.983)--(11.503,2.958)--(11.503,2.945)--(11.577,2.938)--(11.615,2.900)--(11.689,2.889)%
-  --(11.726,2.885)--(11.763,2.884)--(11.801,2.855)--(11.875,2.849)--(11.875,2.830)--(11.987,2.790)%
-  --(12.024,2.769)--(12.061,2.646)--(12.173,2.634)--(12.210,2.633)--(12.433,2.612)--(12.619,2.599)%
-  --(12.731,2.593)--(12.768,2.568)--(12.917,2.553)--(12.954,2.553)--(13.066,2.543)--(13.140,2.492)%
-  --(13.252,2.463)--(13.401,2.463)--(13.401,2.852)--(13.401,2.828)--(13.475,2.762)--(13.512,2.753)%
-  --(13.512,2.705)--(13.512,2.645)--(13.512,2.633)--(13.624,2.633)--(13.624,2.629)--(13.661,2.616)%
-  --(13.661,2.569)--(13.698,2.549)--(13.773,2.491)--(13.810,2.490)--(13.884,2.478)--(13.921,2.470)%
-  --(13.959,2.467)--(14.219,2.462)--(14.219,2.457)--(14.219,2.431)--(14.256,2.427)--(14.256,2.397)%
-  --(14.368,2.374)--(14.591,2.363)--(14.591,2.327)--(14.740,2.326)--(14.740,2.278)--(14.926,2.247)%
-  --(15.075,2.242)--(15.075,2.218)--(15.149,2.199);
+\draw[gp path] (2.424,10.196)--(2.424,10.097)--(2.424,9.633)--(2.424,9.508)--(2.424,9.175)%
+  --(2.424,8.958)--(2.424,8.750)--(2.424,8.742)--(2.424,8.707)--(2.424,8.539)--(2.424,8.472)%
+  --(2.424,8.324)--(3.075,8.193)--(3.075,8.079)--(3.075,7.910)--(3.075,7.686)--(3.075,7.642)%
+  --(3.075,7.614)--(3.075,7.608)--(3.075,7.381)--(3.075,7.372)--(3.075,7.277)--(3.075,7.179)%
+  --(3.075,7.065)--(3.075,7.040)--(3.075,6.865)--(3.075,6.802)--(3.075,6.738)--(3.075,6.690)%
+  --(3.075,6.642)--(3.075,6.466)--(3.075,6.372)--(3.075,6.243)--(3.075,6.205)--(3.075,6.153)%
+  --(3.075,6.060)--(3.075,6.041)--(3.075,5.915)--(3.075,5.911)--(3.075,5.802)--(3.075,5.768)%
+  --(3.075,5.689)--(3.075,5.683)--(3.075,5.668)--(3.075,5.655)--(3.075,5.603)--(3.075,5.570)%
+  --(3.075,5.554)--(3.075,5.548)--(3.075,5.546)--(3.075,5.418)--(3.075,5.366)--(3.075,5.333)%
+  --(3.075,5.259)--(3.726,5.253)--(3.726,5.129)--(3.726,5.116)--(3.726,5.052)--(3.726,5.006)%
+  --(3.726,4.984)--(3.726,4.958)--(3.726,4.951)--(3.726,4.869)--(3.726,4.815)--(3.726,4.728)%
+  --(3.726,4.679)--(3.726,4.663)--(3.726,4.658)--(3.726,4.655)--(3.726,4.632)--(3.726,4.631)%
+  --(3.726,4.612)--(3.726,4.587)--(3.726,4.582)--(3.726,4.521)--(3.726,4.519)--(3.726,4.515)%
+  --(3.726,4.435)--(4.377,4.433)--(4.377,4.418)--(4.377,4.323)--(4.377,4.267)--(4.377,4.242)%
+  --(4.377,4.215)--(4.377,4.214)--(4.377,4.209)--(4.377,4.188)--(4.377,4.179)--(4.377,4.145)%
+  --(4.377,4.128)--(4.377,4.092)--(5.029,4.062)--(5.029,4.061)--(5.029,4.033)--(5.029,4.025)%
+  --(5.029,3.979)--(5.029,3.975)--(5.029,3.944)--(5.029,3.935)--(5.029,3.682)--(5.029,3.650)%
+  --(5.029,3.614)--(5.029,3.603)--(5.029,3.586)--(5.029,3.568)--(5.680,3.563)--(5.680,3.531)%
+  --(5.680,3.517)--(5.680,3.512)--(5.680,3.498)--(5.680,3.475)--(5.680,3.458)--(5.680,3.454)%
+  --(5.680,3.442)--(5.680,3.403)--(5.680,3.389)--(5.680,3.378)--(5.680,3.355)--(5.680,3.332)%
+  --(6.331,3.302)--(6.331,3.296)--(6.331,3.295)--(6.331,3.248)--(6.331,3.210)--(6.331,3.205)%
+  --(6.331,3.193)--(6.331,3.176)--(6.331,3.170)--(6.331,3.136)--(6.982,3.134)--(6.982,3.104)%
+  --(6.982,3.093)--(6.982,3.087)--(6.982,3.072)--(6.982,3.051)--(6.982,3.050)--(6.982,3.034)%
+  --(7.633,3.032)--(7.633,3.002)--(7.633,2.988)--(7.633,2.979)--(7.633,2.951)--(8.284,2.915)%
+  --(8.284,2.912)--(8.284,2.906)--(8.284,2.779)--(8.284,2.764)--(8.284,2.737)--(8.284,2.735)%
+  --(8.284,2.728)--(8.284,2.705)--(8.284,2.686)--(8.936,2.608)--(8.936,2.593)--(8.936,2.584)%
+  --(8.936,2.576)--(8.936,2.542)--(8.936,2.529)--(8.936,2.525)--(9.587,2.518)--(9.587,2.496)%
+  --(9.587,2.487)--(9.587,2.474)--(9.587,2.450)--(9.587,2.444)--(9.587,2.425)--(10.238,2.414)%
+  --(10.238,2.406)--(10.238,2.382)--(10.238,2.355)--(10.889,2.337)--(10.889,2.311)--(10.889,2.303)%
+  --(10.889,2.301)--(11.540,2.294)--(11.540,2.289)--(11.540,2.273)--(11.540,2.244)--(12.191,2.242)%
+  --(12.191,2.225)--(12.191,2.219)--(12.191,2.203)--(12.191,2.193)--(12.842,2.181)--(12.842,2.178)%
+  --(13.494,2.148)--(13.494,2.128)--(13.494,2.106)--(13.494,2.094)--(14.145,2.092)--(14.145,2.076)%
+  --(14.145,2.064)--(14.796,2.052)--(14.796,2.043);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
+\draw[gp path] (2.424,11.075)--(2.424,1.661)--(15.447,1.661)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.368) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.661cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
