--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,231 +1,213 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Tue 10 Dec 2024 01:25:44 PM UTC
+%% Tue 17 Dec 2024 02:51:05 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(15.447,1.845);
-\gpcolor{color=gp lt color border}
+\gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
-\draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.9\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.691)--(15.447,3.691);
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,1.477)--(15.447,1.477);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.691)--(2.604,3.691);
-\draw[gp path] (15.447,3.691)--(15.267,3.691);
-\node[gp node right] at (2.240,3.691) {$1.95\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.537)--(15.447,5.537);
+\draw[gp path] (2.608,1.477)--(2.788,1.477);
+\draw[gp path] (15.447,1.477)--(15.267,1.477);
+\node[gp node right] at (2.424,1.477) {$1.925\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,2.350)--(15.447,2.350);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.537)--(2.604,5.537);
-\draw[gp path] (15.447,5.537)--(15.267,5.537);
-\node[gp node right] at (2.240,5.537) {$2\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.383)--(15.447,7.383);
+\draw[gp path] (2.608,2.350)--(2.788,2.350);
+\draw[gp path] (15.447,2.350)--(15.267,2.350);
+\node[gp node right] at (2.424,2.350) {$1.93\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,3.222)--(15.447,3.222);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.383)--(2.604,7.383);
-\draw[gp path] (15.447,7.383)--(15.267,7.383);
-\node[gp node right] at (2.240,7.383) {$2.05\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.229)--(15.447,9.229);
+\draw[gp path] (2.608,3.222)--(2.788,3.222);
+\draw[gp path] (15.447,3.222)--(15.267,3.222);
+\node[gp node right] at (2.424,3.222) {$1.935\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,4.095)--(15.447,4.095);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.229)--(2.604,9.229);
-\draw[gp path] (15.447,9.229)--(15.267,9.229);
-\node[gp node right] at (2.240,9.229) {$2.1\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\draw[gp path] (2.608,4.095)--(2.788,4.095);
+\draw[gp path] (15.447,4.095)--(15.267,4.095);
+\node[gp node right] at (2.424,4.095) {$1.94\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,4.967)--(15.447,4.967);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
+\draw[gp path] (2.608,4.967)--(2.788,4.967);
+\draw[gp path] (15.447,4.967)--(15.267,4.967);
+\node[gp node right] at (2.424,4.967) {$1.945\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,5.840)--(15.447,5.840);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,5.840)--(2.788,5.840);
+\draw[gp path] (15.447,5.840)--(15.267,5.840);
+\node[gp node right] at (2.424,5.840) {$1.95\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,6.712)--(15.447,6.712);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,6.712)--(2.788,6.712);
+\draw[gp path] (15.447,6.712)--(15.267,6.712);
+\node[gp node right] at (2.424,6.712) {$1.955\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,7.585)--(15.447,7.585);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,7.585)--(2.788,7.585);
+\draw[gp path] (15.447,7.585)--(15.267,7.585);
+\node[gp node right] at (2.424,7.585) {$1.96\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,8.457)--(15.447,8.457);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,8.457)--(2.788,8.457);
+\draw[gp path] (15.447,8.457)--(15.267,8.457);
+\node[gp node right] at (2.424,8.457) {$1.965\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,9.330)--(15.447,9.330);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,9.330)--(2.788,9.330);
+\draw[gp path] (15.447,9.330)--(15.267,9.330);
+\node[gp node right] at (2.424,9.330) {$1.97\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,10.202)--(15.447,10.202);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,10.202)--(2.788,10.202);
+\draw[gp path] (15.447,10.202)--(15.267,10.202);
+\node[gp node right] at (2.424,10.202) {$1.975\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,11.075)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,11.075)--(2.788,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\node[gp node right] at (2.424,11.075) {$1.98\times10^{11}$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.608,1.477)--(2.608,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (4.052,1.845)--(4.052,11.075);
+\draw[gp path] (2.608,1.477)--(2.608,1.657);
+\draw[gp path] (2.608,11.075)--(2.608,10.895);
+\node[gp node left,rotate=270] at (2.608,1.293) {$0$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (4.213,1.477)--(4.213,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.052,1.845)--(4.052,2.025);
-\draw[gp path] (4.052,11.075)--(4.052,10.895);
-\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (5.680,1.845)--(5.680,11.075);
+\draw[gp path] (4.213,1.477)--(4.213,1.657);
+\draw[gp path] (4.213,11.075)--(4.213,10.895);
+\node[gp node left,rotate=270] at (4.213,1.293) {$1$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (5.818,1.477)--(5.818,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.680,1.845)--(5.680,2.025);
-\draw[gp path] (5.680,11.075)--(5.680,10.895);
-\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (7.308,1.845)--(7.308,11.075);
+\draw[gp path] (5.818,1.477)--(5.818,1.657);
+\draw[gp path] (5.818,11.075)--(5.818,10.895);
+\node[gp node left,rotate=270] at (5.818,1.293) {$2$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (7.423,1.477)--(7.423,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.308,1.845)--(7.308,2.025);
-\draw[gp path] (7.308,11.075)--(7.308,10.895);
-\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (8.936,1.845)--(8.936,11.075);
+\draw[gp path] (7.423,1.477)--(7.423,1.657);
+\draw[gp path] (7.423,11.075)--(7.423,10.895);
+\node[gp node left,rotate=270] at (7.423,1.293) {$3$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (9.028,1.477)--(9.028,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,1.845)--(8.936,2.025);
-\draw[gp path] (8.936,11.075)--(8.936,10.895);
-\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (10.563,1.845)--(10.563,11.075);
+\draw[gp path] (9.028,1.477)--(9.028,1.657);
+\draw[gp path] (9.028,11.075)--(9.028,10.895);
+\node[gp node left,rotate=270] at (9.028,1.293) {$4$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (10.632,1.477)--(10.632,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.563,1.845)--(10.563,2.025);
-\draw[gp path] (10.563,11.075)--(10.563,10.895);
-\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (12.191,1.845)--(12.191,11.075);
+\draw[gp path] (10.632,1.477)--(10.632,1.657);
+\draw[gp path] (10.632,11.075)--(10.632,10.895);
+\node[gp node left,rotate=270] at (10.632,1.293) {$5$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (12.237,1.477)--(12.237,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.191,1.845)--(12.191,2.025);
-\draw[gp path] (12.191,11.075)--(12.191,10.895);
-\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\draw[gp path] (12.237,1.477)--(12.237,1.657);
+\draw[gp path] (12.237,11.075)--(12.237,10.895);
+\node[gp node left,rotate=270] at (12.237,1.293) {$6$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (13.842,1.477)--(13.842,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.819,1.845)--(13.819,2.025);
-\draw[gp path] (13.819,11.075)--(13.819,10.895);
-\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\draw[gp path] (13.842,1.477)--(13.842,1.657);
+\draw[gp path] (13.842,11.075)--(13.842,10.895);
+\node[gp node left,rotate=270] at (13.842,1.293) {$7$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (15.447,1.477)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,1.477)--(15.447,1.657);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node left,rotate=270] at (15.447,1.293) {$8$};
+\draw[gp path] (2.608,11.075)--(2.608,1.477)--(15.447,1.477)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.612)--(2.424,4.586)--(2.457,4.492)--(2.457,4.457)--(2.457,4.386)%
-  --(2.457,4.356)--(2.457,4.333)--(2.457,4.265)--(2.489,4.221)--(2.489,4.214)--(2.489,4.199)%
-  --(2.489,4.173)--(2.489,4.160)--(2.522,4.140)--(2.522,4.119)--(2.522,4.107)--(2.522,4.050)%
-  --(2.522,4.044)--(2.522,3.972)--(2.554,3.959)--(2.554,3.926)--(2.554,3.912)--(2.554,3.898)%
-  --(2.587,3.881)--(2.587,3.859)--(2.587,3.846)--(2.619,3.824)--(2.619,3.820)--(2.619,3.773)%
-  --(2.619,3.747)--(2.619,3.725)--(2.652,3.722)--(2.652,3.710)--(2.652,3.687)--(2.652,3.676)%
-  --(2.684,3.674)--(2.684,3.637)--(2.684,3.630)--(2.684,3.584)--(2.684,3.566)--(2.717,3.550)%
-  --(2.717,3.537)--(2.717,3.536)--(2.750,3.525)--(2.750,3.520)--(2.782,3.496)--(2.782,3.483)%
-  --(2.782,3.481)--(2.815,3.423)--(2.815,3.409)--(2.815,3.407)--(2.815,3.396)--(2.847,3.380)%
-  --(2.847,3.368)--(2.880,3.357)--(2.880,3.347)--(2.945,3.344)--(3.010,3.343)--(3.010,3.338)%
-  --(3.043,3.326)--(3.043,3.312)--(3.108,3.307)--(3.108,3.304)--(3.108,3.303)--(3.108,3.299)%
-  --(3.140,3.295)--(3.140,3.258)--(3.140,3.245)--(3.140,3.236)--(3.173,3.209)--(3.173,3.204)%
-  --(3.205,3.204)--(3.205,3.201)--(3.205,3.194)--(3.238,3.194)--(3.238,3.188)--(3.270,3.184)%
-  --(3.270,3.169)--(3.303,3.162)--(3.303,3.149)--(3.368,3.148)--(3.368,3.147)--(3.401,3.146)%
-  --(3.433,3.146)--(3.498,3.138)--(3.531,3.135)--(3.564,3.122)--(3.564,3.115)--(3.596,3.112)%
-  --(3.596,3.110)--(3.629,3.109)--(3.629,3.106)--(3.661,3.102)--(3.661,3.097)--(3.694,3.090)%
-  --(3.694,3.085)--(3.726,3.080)--(3.759,3.079)--(3.791,3.075)--(3.791,3.070)--(3.824,3.065)%
-  --(3.824,3.064)--(3.857,3.052)--(3.889,3.051)--(3.922,3.045)--(3.954,3.042)--(3.954,3.037)%
-  --(4.019,3.025)--(4.019,3.022)--(4.084,3.019)--(4.215,3.014)--(4.215,3.012)--(4.312,3.012)%
-  --(4.312,3.006)--(4.345,2.729)--(4.410,2.725)--(4.443,2.720)--(4.443,2.718)--(4.475,2.715)%
-  --(4.475,2.714)--(4.508,2.714)--(4.508,2.713)--(4.540,2.705)--(4.605,2.705)--(4.670,2.704)%
-  --(4.670,2.702)--(4.833,2.701)--(4.833,2.699)--(4.866,2.699)--(4.898,2.694)--(4.931,2.692)%
-  --(4.931,2.690)--(4.963,2.683)--(5.029,2.682)--(5.029,2.674)--(5.094,2.668)--(5.126,2.666)%
-  --(5.224,2.663)--(5.387,2.661)--(5.452,2.660)--(5.484,2.649)--(5.550,2.644)--(5.582,2.643)%
-  --(5.615,2.642)--(5.647,2.641)--(5.843,2.640)--(5.908,2.639)--(5.940,2.638)--(6.038,2.633)%
-  --(6.136,2.629)--(6.168,2.627)--(6.363,5.184)--(6.363,5.182)--(6.396,5.180)--(6.429,5.178)%
-  --(6.429,5.172)--(6.526,5.167)--(6.689,5.167)--(6.722,5.167)--(6.754,5.163)--(7.438,5.162)%
-  --(7.536,5.161)--(7.568,5.160)--(7.633,5.153)--(7.666,5.148)--(7.861,5.147)--(7.926,5.144)%
-  --(8.089,5.141)--(8.122,5.137)--(8.154,5.134)--(8.447,5.071)--(8.512,5.068)--(8.577,5.063)%
-  --(8.675,5.061)--(8.773,5.057)--(9.391,5.052)--(9.652,5.047)--(10.010,5.046)--(10.075,5.044)%
-  --(10.238,10.102)--(10.303,10.099)--(10.368,10.097)--(10.759,10.092)--(11.312,10.086)--(11.442,10.081)%
-  --(11.540,10.080)--(11.670,10.078)--(11.735,10.077)--(11.801,10.076)--(11.833,10.071)--(12.159,10.069)%
-  --(12.419,9.825)--(12.973,9.818)--(13.070,9.813)--(13.103,9.813)--(13.819,9.813)--(13.852,9.813)%
-  --(14.047,9.810)--(14.080,9.807)--(14.080,9.806);
+\draw[gp path] (2.608,10.793)--(2.608,10.562)--(2.608,10.404)--(2.608,10.016)--(2.608,9.965)%
+  --(2.608,9.945)--(2.608,9.744)--(2.608,9.593)--(2.608,9.540)--(2.608,9.509)--(2.608,9.195)%
+  --(2.608,8.965)--(2.608,8.896)--(2.608,8.848)--(2.608,8.618)--(2.608,8.409)--(2.608,8.277)%
+  --(2.608,8.162)--(2.608,8.086)--(2.608,7.901)--(2.608,7.840)--(2.608,7.781)--(2.608,7.412)%
+  --(2.608,7.373)--(2.608,7.356)--(2.608,6.920)--(2.608,6.791)--(2.608,6.769)--(2.608,6.753)%
+  --(2.608,6.681)--(2.608,6.490)--(2.608,6.439)--(2.608,6.404)--(2.608,6.397)--(2.608,6.391)%
+  --(4.213,6.238)--(4.213,6.151)--(4.213,6.129)--(4.213,6.009)--(4.213,6.007)--(4.213,5.933)%
+  --(4.213,5.807)--(4.213,5.751)--(4.213,5.733)--(4.213,5.686)--(4.213,5.678)--(4.213,5.606)%
+  --(4.213,5.532)--(4.213,5.410)--(4.213,5.162)--(4.213,5.116)--(4.213,5.108)--(4.213,5.075)%
+  --(4.213,4.999)--(4.213,4.817)--(4.213,4.776)--(4.213,4.691)--(4.213,4.676)--(4.213,4.661)%
+  --(4.213,4.460)--(4.213,4.401)--(4.213,4.372)--(4.213,4.369)--(4.213,4.327)--(4.213,4.292)%
+  --(4.213,4.259)--(4.213,4.242)--(4.213,4.139)--(4.213,4.104)--(4.213,4.087)--(4.213,4.082)%
+  --(4.213,4.046)--(4.213,3.954)--(4.213,3.928)--(4.213,3.878)--(4.213,3.814)--(5.818,3.797)%
+  --(5.818,3.773)--(5.818,3.752)--(5.818,3.704)--(5.818,3.657)--(5.818,3.632)--(5.818,3.588)%
+  --(5.818,3.530)--(5.818,3.514)--(5.818,3.491)--(5.818,3.478)--(5.818,3.413)--(5.818,3.389)%
+  --(5.818,3.292)--(5.818,3.251)--(5.818,3.202)--(5.818,3.182)--(5.818,3.145)--(5.818,3.139)%
+  --(5.818,3.108)--(5.818,3.097)--(7.423,3.092)--(7.423,3.091)--(7.423,3.074)--(7.423,3.051)%
+  --(7.423,3.043)--(7.423,3.028)--(7.423,3.023)--(7.423,3.013)--(7.423,2.938)--(7.423,2.903)%
+  --(7.423,2.891)--(7.423,2.878)--(7.423,2.853)--(7.423,2.845)--(9.028,2.806)--(9.028,2.779)%
+  --(9.028,2.750)--(9.028,2.700)--(9.028,2.692)--(9.028,2.691)--(9.028,2.640)--(9.028,2.587)%
+  --(10.632,2.544)--(10.632,2.528)--(10.632,2.511)--(10.632,2.459)--(10.632,2.451)--(10.632,2.447)%
+  --(10.632,2.438)--(10.632,2.406)--(10.632,2.394)--(10.632,2.386)--(10.632,2.378)--(12.237,2.343)%
+  --(12.237,2.342)--(12.237,2.330)--(12.237,2.325)--(12.237,2.314)--(12.237,2.313)--(12.237,2.307)%
+  --(12.237,2.294)--(12.237,2.278)--(12.237,2.270)--(12.237,2.248)--(12.237,2.241)--(12.237,2.231)%
+  --(12.237,2.230)--(12.237,2.221)--(12.237,2.201)--(13.842,2.187)--(13.842,2.175)--(13.842,2.165)%
+  --(15.447,2.165)--(15.447,2.157)--(15.447,2.150)--(15.447,2.149)--(15.447,2.139)--(15.447,2.129);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
-\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
+\draw[gp path] (2.608,11.075)--(2.608,1.477)--(15.447,1.477)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.276) {Objective value};
+\node[gp node center] at (9.027,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (9.027,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{1.477cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
